Fix: Manual constructor and open CORS policy